--- a/css/styles.css
+++ b/css/styles.css
@@ -34,9 +34,39 @@ nav ul {
 nav a {
   color: white;
   text-decoration: none;
+  font-family: hatolie;
+  font-size: 20px;
+  font-stretch: semi-expanded;
 }
 
 nav a:hover {
   text-decoration: underline;
   text-decoration-style: solid;
+}
+
+.hero-image img {
+  background: linear-gradient(rgba (0, 0, 0, 0.5) rgba (0, 0, 0, 0.5)),
+    url(../images/beautiful-wide-shot-full-moon-night-sky.jpg);
+  background-position: center top;
+  height: 40%;
+  width: 100%;
+  object-fit: contain;
+  filter: brightness(60%);
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 30%;
+  left: 33%;
+  color: white;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 30px;
+  font-family: hatolie;
+  font-stretch: semi-expanded;
+}
+
+@font-face {
+  font-family: hatolie;
+  src: url(Hatolie.ttf);
 }
