--- a/css/styles.css
+++ b/css/styles.css
@@ -191,3 +191,29 @@ ul li:hover ul.dropdown {
 .kuutar img {
   width: 20%;
 }
+
+.khonshu {
+  margin-left: 100px;
+  margin-top: 50px;
+}
+
+.khonshu h3 {
+  font-family: hatolie;
+  font-stretch: semi-expanded;
+  font-size: 30px;
+}
+.khonshu #flexbox4 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.khonshu p {
+  width: 600px;
+}
+
+.khonshu img {
+  width: 20%;
+}
