--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ p {
   margin-bottom: 16px;
 }
 
+/* Syling for all Pages  */
 body {
   background-color: #f2d1c9;
   height: 100%;
@@ -26,8 +27,10 @@ body {
 
 nav {
   height: 50px;
-  background-color: #462749;
+  width: 100%;
+  background-color: purple;
 }
+
 nav ul {
   list-style: none;
   display: flex;
@@ -49,21 +52,25 @@ nav a:hover {
   text-decoration-style: solid;
 }
 
-.hero-image img {
-  background: linear-gradient(rgba (0, 0, 0, 0.5) rgba (0, 0, 0, 0.5)),
-    url(../images/beautiful-wide-shot-full-moon-night-sky.jpg);
-  background-position: center top;
-  height: 40%;
-  width: 100%;
-  object-fit: contain;
-  filter: brightness(60%);
+.headerHome{
+  height: 500px;
+  background-color: antiquewhite;
+  background-image: url(../images/beautiful-wide-shot-full-moon-night-sky.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+}
+
+.hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .hero-text {
   text-align: center;
-  position: absolute;
-  top: 30%;
-  left: 33%;
   color: white;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 30px;
@@ -71,11 +78,13 @@ nav a:hover {
   font-stretch: semi-expanded;
 }
 
+
 @font-face {
   font-family: hatolie;
   src: url(Hatolie.ttf);
 }
 
+/* Home page */
 .intro {
   display: flex;
   flex-direction: row;
@@ -120,4 +129,27 @@ nav a:hover {
 .haliya img {
   width: 40%
   border-radius: 50%;
+}
+
+
+/* Chandra page */
+
+.headerChandra{
+  height: 500px;
+  background-color: antiquewhite;
+  background-image: url(../images/chandraHeroImage.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+}
+
+.content-chandra{
+  padding: 50px;
+}
+.intro-chandra{
+  font-size: x-large;
+  text-align: center;
+
 }
