begin styling chandra page

--- a/css/styles.css
+++ b/css/styles.css
@@ -224,3 +224,36 @@ h3 {
   display: flex;
   justify-content: center;
 }
+
+.content-chandra {
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 50px;
+}
+
+.list-origin-chandra {
+  margin-left: 50px;
+}
+
+.bold-chandra {
+  font-weight: bold;
+}
+
+.text-img-chandra {
+  width: 100%;
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+}
+
+.text-chandra {
+  width: 60%;
+}
+
+.image-chandra {
+  width: 15%;
+}
+
+.image-chandra img {
+  width: 100%;
+}
