--- a/css/styles.css
+++ b/css/styles.css
@@ -243,6 +243,7 @@ h3 {
   width: 100%;
   display: flex;
   align-content: center;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -251,7 +252,7 @@ h3 {
 }
 
 .image-chandra {
-  width: 15%;
+  width: 18%;
 }
 
 .image-chandra img {
