--- a/css/styles.css
+++ b/css/styles.css
@@ -224,3 +224,58 @@ h3 {
   display: flex;
   justify-content: center;
 }
+
+.poll {
+  position: absolute;
+  top: 800px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background: #e086d3;
+  border-radius: 10px;
+  box-shadow: 6px 6px 20px 5px rgba (35, 30, 128, 0.05);
+}
+
+.poll .question {
+  padding: 20px;
+  color: #462749;
+  font-size: 18px;
+  border-bottom: 1px solid #462749;
+  font-family: golding;
+}
+
+.poll .answers {
+  padding: 20px 20px 10px;
+}
+
+.poll .answers .answer {
+  position: relative;
+  width: 100%;
+  height: 40px;
+  padding: 0px 10px;
+  line-height: 40px;
+  color: #462749;
+  margin-bottom: 10px;
+  border: 1px solid #462749;
+  border-radius: 10px;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.poll .answers .answer.selected {
+  border: 2px solid #e086d3;
+}
+
+.poll .answers .answer span.percentage-value {
+  position: absolute;
+  top: 50%;
+  right: 0px;
+  width: 40px;
+  transform: translateY(-50%);
+  color: #462749;
+  font-size: 15px;
+}
+
+.poll .answers .answer span.percentage-bar {
+  position: absolute;
+}
