--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ p {
   margin-bottom: 16px;
 }
 
-/* Syling for all Pages  */
+/* Styling for all Pages  */
 body {
   background-color: #f2d1c9;
   height: 100%;
@@ -48,8 +48,12 @@ nav a {
 }
 
 nav a:hover {
-  text-decoration: underline;
   text-decoration-style: solid;
+  border-bottom: 2px solid #f2d1c9;
+  padding-bottom: 3px;
+}
+nav ul li a.active {
+  font-weight: bold;
 }
 
 ul li ul.dropdown li {
@@ -257,6 +261,17 @@ h3 {
 
 .image-chandra img {
   width: 100%;
+}
+
+.headerKuutar {
+  height: 500px;
+  background-color: antiquewhite;
+  background-image: url(../images/kuutarHeader.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
 }
 
 .poll {
