--- a/css/styles.css
+++ b/css/styles.css
@@ -287,27 +287,25 @@ h3 {
   border-radius: 25%;
 }
 
-.haliya-page {
+.headerHaliya {
+  height: 500px;
+  background-color: antiquewhite;
+  background-image: url(//images/HaliyaCover.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
 }
 
-.haliya-page section {
-  font-family: hatolie;
-  margin: 20px;
+.image-Haliya {
+  margin-right: 100px;
 }
 
-.haliya-page p {
-  width: 830px;
-  font-stretch: semi-expanded;
-  font-size: 20px;
-  margin-top: 50px;
-  display: flex;
-  align-items: center;
-  text-align: center;
+.image-Haliya img {
+  height: 150%;
+  width: 150%;
+  border-radius: 25%;
 }
 
 .poll {
