--- a/css/styles.css
+++ b/css/styles.css
@@ -208,6 +208,7 @@ h3 {
   flex-wrap: nowrap;
   justify-content: space-evenly;
   align-items: center;
+  padding-bottom: 50px;
 }
 
 .khonshu p {
@@ -285,6 +286,20 @@ h3 {
   height: 150%;
   width: 150%;
   border-radius: 25%;
+}
+
+.headerKhonshu {
+  height: 500px;
+  background-color: antiquewhite;
+  background-image: url(../images/khonshu\ header.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+}
+.legends {
+  padding-bottom: 50px;
 }
 
 .poll {
