updated pages w/ js, added more content to Khonshu

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,12 +123,14 @@ ul li:hover ul.dropdown {
   display: flex;
   align-items: center;
   text-align: center;
+  color: #462749;
 }
 
 h3 {
   font-family: hatolie;
   font-stretch: semi-expanded;
   font-size: 30px;
+  color: #462749;
 }
 
 .haliya {
@@ -142,6 +144,7 @@ h3 {
   flex-wrap: nowrap;
   justify-content: space-evenly;
   align-items: center;
+  color: #462749;
 }
 
 .haliya p {
@@ -150,6 +153,7 @@ h3 {
 
 .haliya img {
   width: 20%;
+  border-radius: 30px;
 }
 
 .chandra {
@@ -163,6 +167,7 @@ h3 {
   flex-wrap: nowrap;
   justify-content: space-evenly;
   align-items: center;
+  color: #462749;
 }
 
 .chandra p {
@@ -171,6 +176,7 @@ h3 {
 
 .chandra img {
   width: 20%;
+  border-radius: 30px;
 }
 
 .kuutar {
@@ -189,12 +195,14 @@ h3 {
   flex-wrap: nowrap;
   justify-content: space-evenly;
   align-items: center;
+  color: #462749;
 }
 .kuutar p {
   width: 600px;
 }
 .kuutar img {
   width: 20%;
+  border-radius: 30px;
 }
 
 .khonshu {
@@ -209,6 +217,7 @@ h3 {
   justify-content: space-evenly;
   align-items: center;
   padding-bottom: 50px;
+  color: #462749;
 }
 
 .khonshu p {
@@ -217,6 +226,7 @@ h3 {
 
 .khonshu img {
   width: 20%;
+  border-radius: 30px;
 }
 
 .headerChandra {
@@ -233,11 +243,10 @@ h3 {
 .content-chandra {
   margin: 60px auto;
   max-width: 1300px;
-  background: #f2d1c9;
+  background: white;
   padding: 40px;
   border-radius: 20px;
   box-shadow: 8px 8px 25px rgba(70, 39, 73, 0.1);
-  font-family: hatolie;
   color: #462749;
 }
 
@@ -269,6 +278,7 @@ h3 {
 .image-chandra {
   width: 30%;
   transition: transform 0.3s ease-in-out;
+  margin-right: 50px;
 }
 
 .image-chandra img {
@@ -279,6 +289,18 @@ h3 {
 
 .image-chandra:hover {
   transform: scale(1.05);
+}
+
+.kuutarTemple p {
+  width: 600px;
+}
+.kuutarTemple {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+  margin-top: 30px;
+  flex-wrap: wrap;
 }
 
 .popup2 {
@@ -347,15 +369,6 @@ h3 {
 .maiden-prayer {
   width: 250px;
   font-style: italic;
-}
-.image-kuutar {
-  margin-right: 100px;
-}
-
-.image-kuutar img {
-  height: 150%;
-  width: 150%;
-  border-radius: 25%;
 }
 
 .headerKhonshu {
